--- a/WPFTreeView/MainWindow.xaml
+++ b/WPFTreeView/MainWindow.xaml
@@ -15,7 +15,11 @@
                         <Setter.Value>
                             <DataTemplate>
                                 <StackPanel Orientation="Horizontal">
-                                    <Image Width="20" Source="Images\PC_go-14-512.png"/>
+                                    <Image Width="20" Margin="3"
+                                           Source="{Binding 
+                                                RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type TreeViewItem}},
+                                                Path=Tag,
+                                         Converter={x:Static local:HeaderToImageConverter.Instance}}"/>
                                     <TextBlock VerticalAlignment="Center" Text="{Binding}"/>
                                 </StackPanel>
                             </DataTemplate>
